# research-notebook

./: .gitignore  espnet2_tts_interjection.ipynb  interjection_index.ipynb  make_interjection_dataset.ipynb  pyproject.toml  tacotron_data.ipynb  test_model.ipynb  tts_verification.ipynb
script/: init.sh
