[tool.poetry]
name = "research-notebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7"
jupyterlab = "^3.0.15"
pytorch-lightning = "^1.3.1"
neptune-client = "^0.9.8"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.8.1%2Bcu101-cp37-cp37m-linux_x86_64.whl"}
psutil = "^5.8.0"
numba = "^0.53.1"
torchinfo = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


